ENTAME-5 購入サイトデモ作成

--- a/src/client/src/app/components/parts/purchase-film-order-performance/purchase-film-order-performance.component.html
+++ b/src/client/src/app/components/parts/purchase-film-order-performance/purchase-film-order-performance.component.html
@@ -1,4 +1,4 @@
-<li class="button white-button {{ availability.className }}" (click)="start()">
+<li class="button white-button {{ availability.className }}" (click)="select()">
     <dl>
         <dt>
             <div class="text-left">
