--- a/src/client/src/app/components/purchase/purchase-input/purchase-input.component.html
+++ b/src/client/src/app/components/purchase/purchase-input/purchase-input.component.html
@@ -88,6 +88,13 @@
             </dl>
         </div>
 
+        <h2 class="section-ttl">エンタメコイン</h2>
+        <div class="box radius bg-light-gray mb-large">
+            <div class="button blue-button">
+                <button type="button" routerLink="/purchase/mocoin/input">エンタメコインを使う</button>
+            </div>
+        </div>
+
         <div *ngIf="purchase.getTotalPrice() > 0">
             <h2 class="section-ttl">
                 お支払情報
