--- a/src/client/src/app/components/parts/header/header.component.html
+++ b/src/client/src/app/components/parts/header/header.component.html
@@ -1,11 +1,5 @@
-<header class="ticket-app-header ticket-app-show">
-    <div class="close">
-        <a href="{{ environment.APP_SITE_URL }}/#/purchase">
-            閉じる
-        </a>
-    </div>
-</header>
-<header class="header clearfix ticket-app-hide">
+
+<header class="header clearfix">
     <div class="inner">
         <div class="logo">
             <a href="{{ environment.PORTAL_SITE_URL }}">
