--- a/src/client/src/app/components/purchase/purchase-schedule/purchase-schedule.component.html
+++ b/src/client/src/app/components/purchase/purchase-schedule/purchase-schedule.component.html
@@ -1,11 +1,11 @@
 <div class="contents">
 
     <h1 class="page-ttl">スケジュール選択</h1>
-    <p class="read">こちらからチケットの購入をする事が出来ます。
+    <!-- <p class="read">こちらからチケットの購入をする事が出来ます。
         <br>ご希望の鑑賞作品、鑑賞日時を選択してください。</p>
     <div *ngFor="let theater of theaters" class="mb-middle button blue-button center-button inquiry-button">
         <a href="{{ environment.FRONTEND_ENDPOINT }}/inquiry/login?theater={{ theater.location.branchCode }}">{{ theater.name.ja }}照会</a>
-    </div>
+    </div> -->
 
     <div class="mb-middle">
         <dl>
