--- a/src/client/src/app/components/purchase/purchase-ticket/purchase-ticket.component.html
+++ b/src/client/src/app/components/purchase/purchase-ticket/purchase-ticket.component.html
@@ -2,7 +2,7 @@
     <h1 class="page-ttl">券種選択</h1>
     <p class="read">ご希望の券種を選択して「次へ」ボタンを押してください。</p>
 
-    <div *ngIf="purchase.isUsedMvtk() && purchase.data.mvtkTickets.length === 0" class="box radius bg-ultra-light-gray mb-middle mvtk">
+    <!-- <div *ngIf="purchase.isUsedMvtk() && purchase.data.mvtkTickets.length === 0" class="box radius bg-ultra-light-gray mb-middle mvtk">
         <dl class="d-table">
             <dt class="d-td">ムビチケ券を利用される方</dt>
             <dd class="d-td width-medium">
@@ -13,9 +13,9 @@
                 </div>
             </dd>
         </dl>
-    </div>
+    </div> -->
 
-    <div *ngIf="user.isMember() && purchase.data.pointTickets.length === 0" class="box radius bg-ultra-light-gray mb-middle point">
+    <!-- <div *ngIf="user.isMember() && purchase.data.pointTickets.length === 0" class="box radius bg-ultra-light-gray mb-middle point">
         <dl class="d-table">
             <dt class="d-td">会員ポイントを利用される方</dt>
             <dd class="d-td width-medium">
@@ -26,7 +26,7 @@
                 </div>
             </dd>
         </dl>
-    </div>
+    </div> -->
 
     <ul class="box radius bg-light-gray mb-middle seats">
         <li *ngFor="let offer of offers">
