SSKTS-817 [お客様情報入力]姓名の入力をカタカナに変更

--- a/src/client/src/app/components/purchase/purchase-confirm/purchase-confirm.component.html
+++ b/src/client/src/app/components/purchase/purchase-confirm/purchase-confirm.component.html
@@ -75,8 +75,8 @@
         <ul class="box radius bg-light-gray mb-large">
             <li>
                 <dl>
-                    <dt>お名前（ひらがな）</dt>
-                    <dd>{{ purchase.data.customerContact?.familyName }} {{ purchase.data.customerContact?.givenName }}</dd>
+                    <dt>お名前（カタカナ）</dt>
+                    <dd>{{ purchase.getCustomerName() }}</dd>
                 </dl>
             </li>
             <li>
