購入者情報入力の注意事項を変更

--- a/src/client/src/app/components/pages/purchase/purchase-input/purchase-input.component.html
+++ b/src/client/src/app/components/pages/purchase/purchase-input/purchase-input.component.html
@@ -233,6 +233,7 @@
                     <br>
                     <strong>プリペイド形式（デビットカード、LINEPayカード等）で一時的に残高が減る。</strong>
                     <br> ⇒購入完了していない場合は後ほど残高が戻ります。残高が戻るまでの期間は各カード会社様によって異なります。
+                    <br>※スマートフォンアプリではプリペイド形式の使用は出来ません。
                 </p>
             </div>
         </div>
