SSKTS-1164 期間指定、劇場指定でAPI切り替え機能追加

--- a/views/inquiry/confirm.ejs
+++ b/views/inquiry/confirm.ejs
@@ -83,6 +83,7 @@
 <div id="copy" style="display: none"></div>
 
 <input type="hidden" name="theaterCode" value="<%= inquiryModel.movieTheaterOrganization.location.branchCode %>">
+<input type="hidden" name="branchCode" value="<%= inquiryModel.movieTheaterOrganization.location.branchCode %>">
 <input type="hidden" name="reserveNum" value="<%= inquiryModel.input.reserveNum %>">
 <input type="hidden" name="telephone" value="<%= inquiryModel.input.telephone %>">
 <input type="hidden" name="orderNumber" value="<%= inquiryModel.order.orderNumber %>">
