--- a/views/inquiry/login.ejs
+++ b/views/inquiry/login.ejs
@@ -26,6 +26,7 @@
         </div>
 
         <input type="hidden" name="theaterCode" value="<%= inquiryModel.movieTheaterOrganization.location.branchCode %>">
+        <input type="hidden" name="branchCode" value="<%= inquiryModel.movieTheaterOrganization.location.branchCode %>">
         
         <div class="button-area clearfix">
             <div class="button next-button blue-button"><button class="icon-next-white" type="submit"><%- __('inquiry.login.next') %></button></div>
