--- a/src/client/src/app/components/pages/purchase/purchase-schedule/purchase-schedule.component.html
+++ b/src/client/src/app/components/pages/purchase/purchase-schedule/purchase-schedule.component.html
@@ -3,8 +3,11 @@
     <h1 class="page-ttl">スケジュール選択</h1>
     <p class="read">こちらからチケットの購入をする事が出来ます。
         <br>ご希望の鑑賞作品、鑑賞日時を選択してください。</p>
-    <div *ngFor="let theater of theaters" class="mb-middle button blue-button center-button inquiry-button">
-        <a href="{{ environment.FRONTEND_ENDPOINT }}/inquiry/login?theater={{ theater.location.branchCode }}">{{ theater.name.ja }}照会</a>
+    <div class="inquiry-buttons mb-middle">
+        <div *ngFor="let theater of theaters" class="button blue-button center-button inquiry-button">
+            <a
+                href="{{ environment.FRONTEND_ENDPOINT }}/inquiry/login?theater={{ theater.location.branchCode }}">{{ theater.name.ja }}照会</a>
+        </div>
     </div>
 
     <div class="mb-middle">
@@ -12,7 +15,8 @@
             <dt class="mb-x-small">劇場</dt>
             <dd class="mb-small">
                 <select [(ngModel)]="conditions.theater" (change)="changeConditions()">
-                    <option *ngFor="let theater of theaters" value="{{ theater.location.branchCode }}">{{ theater.name.ja }}</option>
+                    <option *ngFor="let theater of theaters" value="{{ theater.location.branchCode }}">
+                        {{ theater.name.ja }}</option>
                 </select>
             </dd>
         </dl>
