### Changed - パッケージ更新対応

--- a/src/client/src/app/components/pages/purchase/purchase-point/purchase-point.component.html
+++ b/src/client/src/app/components/pages/purchase/purchase-point/purchase-point.component.html
@@ -5,7 +5,7 @@
     </p>
     <div class="mb-middle point text-center">
         <div class="inner bg-gray">現在
-            <strong class="large-text">{{ user.data.account?.availableBalance }}</strong> ポイント</div>
+            <strong class="large-text">{{ user.data.account?.typeOfGood.availableBalance }}</strong> ポイント</div>
     </div>
 
     <ul *ngIf="!isLoading" class="box radius bg-light-gray mb-middle tickets">
