--- a/src/client/src/app/components/pages/purchase/purchase-ticket/purchase-ticket.component.html
+++ b/src/client/src/app/components/pages/purchase/purchase-ticket/purchase-ticket.component.html
@@ -58,7 +58,7 @@
         </div>
         <div class="border-bottom-dot mb-small"></div>
         <!-- 4DX -->
-        <p *ngIf="(purchase.data.individualScreeningEvent?.superEvent.coaInfo.kbnJoueihousiki?.kubunCode === '002')" class="small-x-text mb-xx-small">
+        <p *ngIf="(purchase.data.screeningEvent?.superEvent.coaInfo?.kbnJoueihousiki?.kubunCode === '002')" class="small-x-text mb-xx-small">
             ※[４DXをご鑑賞のお客様へ]
             <br> ４DX®作品は「身長100cm未満の方は入場不可」「身長120cm未満のお子様は保護者同伴」の入場制限がありますので、ご注意くださいませ。
             <br> また、妊娠されている方、ご高齢の方、心臓・背中・腰・首などに障害のある方、特別な疾病のある方、乗り物酔いしやすい方、体調に不安のある方はご利用になれません。
