--- a/src/client/src/app/components/pages/purchase/purchase-complete/purchase-complete.component.html
+++ b/src/client/src/app/components/pages/purchase/purchase-complete/purchase-complete.component.html
@@ -75,7 +75,9 @@
                 <br>購入完了後、購入完了メールが届かない場合は下記2点をご確認ください。
                 <br>また、購入完了メールは自動送信のため再送信は致しかねます。
                 <br>購入できているかのご確認は「予約番号」をお控えのうえ
-                <a class="inquiry-login-link" href="{{ getInquiryUrl() }}" target="_blank">チケット照会ページ</a>よりご確認ください。
+                <a class="inquiry-login-link"
+                    [href]="environment.FRONTEND_ENDPOINT + '/inquiry/login?theater=' + data.seller.location?.branchCode + '&reserve=' + data.order.confirmationNumber"
+                    target="_blank">チケット照会ページ</a>よりご確認ください。
                 <br>・ご入力いただいたメールアドレスに不備があった場合やメールの着信を拒否されている場合は購入完了メールが受け取れない場合があります。
                 <br>・プロバイダのメール設定、携帯キャリア会社のメール設定のフィルタリング機能を有効にしている方は「削除フォルダ」または「迷惑メールフォルダ」をご確認ください。</p>
             <div class="button dark-blue-button print-button center-button not-print">
@@ -100,11 +102,14 @@
                                 <img src="/assets/images/purchase/complete/qr.svg" alt="">
                             </div>
                             <div class="button blue-button inquiry-button mb-small center-button">
-                                <a class="icon-new-tab-white" href="{{ getInquiryUrl() }}" target="_blank">チケット情報確認</a>
+                                <a class="icon-new-tab-white"
+                                    [href]="environment.FRONTEND_ENDPOINT + '/inquiry/login?theater=' + data.seller.location?.branchCode + '&reserve=' + data.order.confirmationNumber"
+                                    target="_blank">チケット情報確認</a>
                             </div>
                             <p>スマートフォンをお持ちでない方は当日チケット発券/入場も可能です。
                                 <br>発券方法は
-                                <a class="icon-new-tab-blue" href="{{ environment.FRONTEND_ENDPOINT }}/method/ticketing" target="_blank">こちら</a>
+                                <a class="icon-new-tab-blue" href="{{ environment.FRONTEND_ENDPOINT }}/method/ticketing"
+                                    target="_blank">こちら</a>
                             </p>
                         </dd>
                     </dl>
@@ -114,7 +119,8 @@
             <div class="button-area">
                 <div class="prev-link">
                     <a href="{{ environment.PORTAL_SITE_URL }}">
-                        <app-icon iconName="prev-black" width="15" height="15"></app-icon>戻る</a>
+                        <app-icon iconName="prev-black" width="15" height="15"></app-icon>戻る
+                    </a>
                 </div>
             </div>
         </div>
