--- a/src/client/src/app/components/pages/purchase/purchase-confirm/purchase-confirm.component.html
+++ b/src/client/src/app/components/pages/purchase/purchase-confirm/purchase-confirm.component.html
@@ -9,7 +9,7 @@
             作品情報
             <div class="right ticket-app-hide">
                 <div class="button light-gray-button change-button">
-                    <a href="{{ purchase.data.movieTheaterOrganization?.url }}">変更</a>
+                    <a href="{{ purchase.data.seller?.url }}">変更</a>
                 </div>
             </div>
             <div class="right ticket-app-show">
@@ -48,7 +48,7 @@
                 <dl>
                     <dt>座席</dt>
                     <dd>
-                        <p *ngFor="let offer of purchase.data.seatReservationAuthorization?.object.offers">
+                        <p *ngFor="let offer of purchase.data.seatReservationAuthorization?.object.acceptedOffer">
                             {{ offer.seatNumber }} {{ offer.ticketInfo.ticketName }} ￥{{ offer.ticketInfo.salePrice }}
                         </p>
                     </dd>
@@ -105,7 +105,7 @@
         <h2 class="section-ttl">注意事項(重要)</h2>
         <p class="mb-small">下記項目をご確認いただきチェックを入れて「購入完了」ボタンを押してください。</p>
         
-        <app-purchase-note class="mb-middle" [theaterCode]="purchase.data.individualScreeningEvent?.superEvent.location.branchCode.slice(-2)"></app-purchase-note>
+        <app-purchase-note class="mb-middle" [theaterCode]="purchase.data.screeningEvent?.superEvent.location.branchCode.slice(-2)"></app-purchase-note>
 
         <form [formGroup]="confirmForm" (ngSubmit)="onSubmit()">
             <div class="mb-x-large text-center">
