--- a/views/inquiry/confirm.ejs
+++ b/views/inquiry/confirm.ejs
@@ -65,7 +65,7 @@
                         <%= date %> <%= startTime %> - <%= endTime %>
                     </div>
                     <div class="mb-xx-small small-text"><strong><%- __('common.theater') %></strong></div>
-                    <div class="mb-x-small"><%= inquiryModel.movieTheaterOrganization.location.name.ja %></div>
+                    <div class="mb-x-small"><%= inquiryModel.seller.location.name.ja %></div>
                     <div class="mb-xx-small small-text"><strong><%- __('common.screen') %></strong></div>
                     <div class="mb-x-small"><%= offer.itemOffered.reservationFor.location.name.ja %></div>
                     <div class="mb-xx-small small-text"><strong><%- __('common.filmTitle') %></strong></div>
@@ -77,13 +77,13 @@
     </ul>
     
     <div class="button-area clearfix">
-        <div class="prev-link"><a class="icon-prev-black" href="/inquiry/login?theater=<%= inquiryModel.movieTheaterOrganization.location.branchCode %>"><%- __('inquiry.confirm.prev') %></a></div>
+        <div class="prev-link"><a class="icon-prev-black" href="/inquiry/login?theater=<%= inquiryModel.seller.location.branchCode %>"><%- __('inquiry.confirm.prev') %></a></div>
     </div>
 </div>
 <div id="copy" style="display: none"></div>
 
-<input type="hidden" name="theaterCode" value="<%= inquiryModel.movieTheaterOrganization.location.branchCode %>">
-<input type="hidden" name="branchCode" value="<%= inquiryModel.movieTheaterOrganization.location.branchCode %>">
+<input type="hidden" name="theaterCode" value="<%= inquiryModel.seller.location.branchCode %>">
+<input type="hidden" name="branchCode" value="<%= inquiryModel.seller.location.branchCode %>">
 <input type="hidden" name="reserveNum" value="<%= inquiryModel.input.reserveNum %>">
 <input type="hidden" name="telephone" value="<%= inquiryModel.input.telephone %>">
 <input type="hidden" name="orderNumber" value="<%= inquiryModel.order.orderNumber %>">
