### Changed - スクリーン生成での特別席に対応

--- a/src/client/src/app/components/parts/screen/screen.component.html
+++ b/src/client/src/app/components/parts/screen/screen.component.html
@@ -54,7 +54,8 @@
                     <a class="{{ seat.status }}" 
                     [ngStyle]="{
                         'width.px': seat.w,
-                        'height.px': seat.h
+                        'height.px': seat.h,
+                        'background-size': seat.w + 'px ' + seat.h + 'px'
                     }" (click)="seatSelect(seat)"><span>{{ seat.label }}</span></a>
                 </div>
             </div>
