--- a/src/client/src/app/components/parts/screen/screen.component.scss
+++ b/src/client/src/app/components/parts/screen/screen.component.scss
@@ -21,7 +21,6 @@ $mobile: 767px;
             color: #9a9a9b;
             padding-top: 20px;
             background-image: url(/images/theater/seat/normal.svg);
-            background-size: 40px 50px;
             background-repeat: no-repeat;
             &.active {
                 color: #FFF;
@@ -37,9 +36,53 @@ $mobile: 767px;
     .seat-hc {
         a {
             background-image: url(/images/theater/seat/hc_disabled.svg) !important;
-            background-size: 40px 50px;
             span {
                 display: none !important;
+            }
+        }
+    }
+    .seat-premium-class {
+        a {
+            background-color: #CCC;
+            background-image: url(/images/theater/seat/premium-class.svg);
+            &.active {
+                color: #FFF;
+                background-image: url(/images/theater/seat/premium-class_active.svg);
+            }
+            &.disabled {
+                color: #FFF;
+                background-image: url(/images/theater/seat/premium-class_disabled.svg);
+                cursor: default;
+            }
+        }
+    }
+    .seat-grand-class {
+        a {
+            background-color: #CCC;
+            background-image: url(/images/theater/seat/grand-class.svg);
+            &.active {
+                color: #FFF;
+                background-image: url(/images/theater/seat/grand-class_active.svg);
+            }
+            &.disabled {
+                color: #FFF;
+                background-image: url(/images/theater/seat/grand-class_disabled.svg);
+                cursor: default;
+            }
+        }
+    }
+    .seat-comfort {
+        a {
+            background-color: #CCC;
+            background-image: url(/images/theater/seat/comfort.svg);
+            &.active {
+                color: #FFF;
+                background-image: url(/images/theater/seat/comfort_active.svg);
+            }
+            &.disabled {
+                color: #FFF;
+                background-image: url(/images/theater/seat/comfort_disabled.svg);
+                cursor: default;
             }
         }
     }
@@ -92,7 +135,6 @@ $mobile: 767px;
     .seat {
         a {
             background-image: url(/images/theater/seat/4dx.svg);
-            background-size: 50px 50px;
             &.active {
                 color: #FFF;
                 background-image: url(/images/theater/seat/4dx_active.svg);
