### Fixed - 特性の機種でスクロール部分が黒くなる不具合修正

--- a/src/client/src/app/components/parts/modal/modal.component.html
+++ b/src/client/src/app/components/parts/modal/modal.component.html
@@ -3,7 +3,7 @@
     <div class="modal position-center">
         <div class="inner">
             <div *ngIf="layout">
-                <div class="box radius bg-white">
+                <div class="box bg-white">
                     <div class="modal-body mb-middle">
                         <ng-content></ng-content>
                     </div>
