--- a/src/client/src/app/components/parts/purchase-term/purchase-term.component.html
+++ b/src/client/src/app/components/parts/purchase-term/purchase-term.component.html
@@ -1,4 +1,4 @@
-<div class="box radius bg-ultra-light-gray term small-x-text">
+<div class="box bg-ultra-light-gray term small-x-text">
     <p>
         【オンライン利用規約】
         <br>
