### Changed - 特別席対応

--- a/src/client/app/components/pages/purchase/purchase-confirm/purchase-confirm.component.html
+++ b/src/client/app/components/pages/purchase/purchase-confirm/purchase-confirm.component.html
@@ -49,7 +49,7 @@
                     <dt>座席</dt>
                     <dd>
                         <p *ngFor="let offer of purchase.data.seatReservationAuthorization?.object.acceptedOffer">
-                            {{ offer.seatNumber }} {{ offer.ticketInfo.ticketName }} ￥{{ offer.ticketInfo.salePrice }}
+                            {{ offer.seatNumber }} {{ offer.ticketInfo.ticketName }} ￥{{ getTicketPrice(offer) }}
                         </p>
                     </dd>
                 </dl>
