--- a/src/client/app/components/pages/purchase/purchase-complete/purchase-complete.component.html
+++ b/src/client/app/components/pages/purchase/purchase-complete/purchase-complete.component.html
@@ -41,7 +41,7 @@
                 <dd>
                     <p *ngFor="let offer of data.order.acceptedOffers">
                         {{ offer.itemOffered.reservedTicket.coaTicketInfo.seatNum }} {{ offer.itemOffered.reservedTicket.coaTicketInfo.ticketName
-                        }} ￥{{ offer.itemOffered.reservedTicket.coaTicketInfo.salePrice }}
+                        }} ￥{{ getOrderTicketPrice(offer) }}
                     </p>
                 </dd>
             </dl>
