--- a/src/client/app/components/test/test-screen/test-screen.component.html
+++ b/src/client/app/components/test/test-screen/test-screen.component.html
@@ -1,5 +1,5 @@
 <div class="mb-middle">
-    <app-screen [inputData]="screenData" [test]="true"></app-screen>
+    <app-screen *ngIf="screenData" [screen]="screenData.screen" [status]="screenData.status"></app-screen>
 </div>
 
 <app-loading [show]="isLoading"></app-loading>
