--- a/src/client/app/components/pages/purchase/purchase-seat/purchase-seat.component.scss
+++ b/src/client/app/components/pages/purchase/purchase-seat/purchase-seat.component.scss
@@ -97,6 +97,7 @@ $mobile: 767px;
         flex-wrap: wrap;
         margin: -5px;
         li {
+            margin: 0;
             width: 50%;
             @media screen and (max-width: $mobile){
                 width: 100%;
