--- a/views/layouts/header.ejs
+++ b/views/layouts/header.ejs
@@ -1,11 +1,11 @@
 <% if (isApp) { %>
 <header class="header">
-    <div class="close"><a href="<%- appSiteUrl %>/#/purchase"><%= __('common.close') %></a></div>
+    <div class="close"><a href="<%- appSiteUrl %>/#/purchase">閉じる</a></div>
 </header>
 <% } else { %>
 <header class="header clearfix">
     <div class="inner">
-        <div class="logo"><a href="<%- PORTAL_SITE_URL %>"><img src="/images/common/logo.svg" alt="<%- __('header.logo') %>"></a></div>
+        <div class="logo"><a href="<%- PORTAL_SITE_URL %>"><img src="/images/common/logo.svg" alt="シネマサンシャイン"></a></div>
     </div>
 </header>
 <% } %>
