--- a/views/inquiry/login.ejs
+++ b/views/inquiry/login.ejs
@@ -16,7 +16,7 @@
                     <div class="validation-text"><%= error.reserveNum.msg %></div>
                     <% } %>
                 </dd>
-                <dt>電話番号/dt>
+                <dt>電話番号</dt>
                 <dd>
                     <input type="text" pattern="\d*" name="telephone" autocomplete="off" placeholder="(例)08000000000"
                         value="<%= inquiryModel.input.telephone %>">
