###  Fixed - メールアドレス入力不具合修正

--- a/src/client/app/components/pages/purchase/purchase-input/purchase-input.component.html
+++ b/src/client/app/components/pages/purchase/purchase-input/purchase-input.component.html
@@ -69,7 +69,7 @@
                 <dt>メールアドレス確認</dt>
                 <dd>
                     <input
-                        [class.validation]="inputForm.controls['emailConfirm'].invalid && inputForm.controls['emailConfirm'].touched"
+                        [class.validation]="(inputForm.controls['emailConfirm'].invalid && inputForm.controls['emailConfirm'].touched) || (inputForm.controls['email'].touched && inputForm.controls['emailConfirm'].touched && (inputForm.controls['email'].value !== inputForm.controls['emailConfirm'].value))"
                         type="email" formControlName="emailConfirm" placeholder="(例)cinema@cinemasunshine.co.jp">
                     <div
                         *ngIf="inputForm.controls['emailConfirm'].invalid && inputForm.controls['emailConfirm'].touched">
