--- a/src/client/app/components/pages/purchase/purchase-seat/purchase-seat.component.scss
+++ b/src/client/app/components/pages/purchase/purchase-seat/purchase-seat.component.scss
@@ -144,5 +144,11 @@ $mobile: 767px;
                 height: (91px / 2);
             }
         }
+        .seat-pair {
+            img {
+                width: (90px / 2);
+                height: (56px / 2);
+            }
+        }
     }
 }
